# SmartIndus-STM32F407ZG-Fusion-Arm-v8-Powered-Industrial-Monitoring-Anomaly-Detection

./: README.md
wifiCourant/: CMakeLists.txt  compile_commands.json  main.c
wifiCourant/.meproject/: config.json
wifiCourant/.meproject/setup/: setup.json
wifiCourant/.meproject/setup/Debug/include/board/: MikroSDK.Board  MikroSDK.GenericPointer  generic_pointer.h  mcu_card.h
wifiCourant/.meproject/setup/Debug/include/core/: delays.h  interrupts.h  preinit.h
wifiCourant/.meproject/setup/Debug/include/drv/: MikroSDK.Driver  MikroSDK.Driver.ADC  MikroSDK.Driver.GPIO.Out  MikroSDK.Driver.GPIO.Port  MikroSDK.Driver.OneWire  MikroSDK.Driver.PWM  MikroSDK.Driver.RTC  MikroSDK.Driver.SPI.Master  MikroSDK.Driver.UART  drv_can.h  drv_digital_in.h  drv_digital_out.h  drv_dma.h  drv_i2c_master.h  drv_name.h  drv_one_wire.h  drv_pwm.h  drv_spi_master.h
wifiCourant/.meproject/setup/Debug/include/hal/: MikroSDK.Hal.ADC  MikroSDK.Hal.GPIO  MikroSDK.Hal.I2C.Master  MikroSDK.Hal.OneWire  MikroSDK.Hal.PWM  MikroSDK.Hal.UART  MikroSDK.HalInterface  hal_can.h  hal_dma.h  hal_rtc.h  hal_target.h  hal_uart.h
wifiCourant/.meproject/setup/Debug/include/hal_ll_port/: MikroSDK.HalLowLevel.ADC  MikroSDK.HalLowLevel.CAN  MikroSDK.HalLowLevel.OneWire  MikroSDK.HalLowLevel.RTC  MikroSDK.HalLowLevel.SPI.Master  MikroSDK.HalLowLevel.UART  assembly.h  hal_ll_adc.h  hal_ll_bit_control.h  hal_ll_one_wire.h  hal_ll_pin_names.h  hal_ll_rcc.h  hal_ll_target_names.h  hal_ll_uart.h
wifiCourant/.meproject/setup/Release/: STM32F407ZG.jcfg
wifiCourant/build-My setup 2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake  wifiCourant.dbg  wifiCourant.dlt  wifiCourant.hex  wifiCourant.lst  wifiCourant_callertable.txt
wifiCourant/build-My setup 2/lib_hallcurrent5/: cmake_install.cmake
wifiCourant/build-My setup 2/lib_wifiesp/: cmake_install.cmake
wifiCourant/lib_hallcurrent5/: CMakeLists.txt
wifiCourant/lib_hallcurrent5/include/: Click.HallCurrent5  hallcurrent5.h
wifiCourant/lib_hallcurrent5/src/: hallcurrent5.c
wifiCourant/lib_wifiesp/: CMakeLists.txt
wifiCourant/lib_wifiesp/include/: Click.WifiEsp  wifiesp.h
wifiCourant/lib_wifiesp/src/: wifiesp.c
(+263 files in other folders)
